[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/main/TwoPlayerNode.gd" type="Script" id=1]
[ext_resource path="res://art/MainMenu/background_plain.png" type="Texture" id=2]
[ext_resource path="res://scenes/main/Player1Grid.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/main/Player2Grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/sounds/Bg_dungeon_boss.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/main/SwipeDetector.tscn" type="PackedScene" id=6]

[node name="TwoPlayerNode" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.48595, 0.496094, 0.366257, 1 )
margin_left = -342.0
margin_top = -31.0
margin_right = 1578.0
margin_bottom = 1169.0
rect_scale = Vector2( 2, 2.1 )
texture = ExtResource( 2 )

[node name="Player1Grid" parent="." instance=ExtResource( 3 )]

[node name="Player2Grid" parent="." instance=ExtResource( 4 )]
position = Vector2( 590, 0 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 200.0
one_shot = true
autostart = true

[node name="BgPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.8

[node name="SwipeDetector" parent="." instance=ExtResource( 6 )]
z_index = 10
z_as_relative = false

[connection signal="GameOver" from="Player1Grid" to="." method="_on_Player1Grid_GameOver"]
[connection signal="SendCounterGem" from="Player1Grid" to="." method="_on_Player1Grid_SendCounterGem"]
[connection signal="GameOver" from="Player2Grid" to="." method="_on_Player2Grid_GameOver"]
[connection signal="SendCounterGem" from="Player2Grid" to="." method="_on_Player2Grid_SendCounterGem"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="rotate_tap" from="SwipeDetector" to="." method="_on_SwipeDetector_rotate_tap"]
[connection signal="swiped_down" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped_down"]
[connection signal="swiped_left" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped_left"]
[connection signal="swiped_right" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped_right"]
